# GeoCognition

./: .eslintrc.cjs  .gitignore  .prettierignore  LICENSE  PROJECT_BRIEF.md  README.md  REVISIONS_BRIEF.md  conftest.py  index.html  main.py  package.json  playwright.config.ts  pnpm-lock.yaml  requirements.txt  tailwind.config.ts  vite.config.ts
.github/workflows/: ci.yml  release.yml
data/: countries.json  geocognition.db
public/geo/: continents.geojson  world-110m.geojson
scripts/: README.md  add-borders.ts  add-french-names.ts  build-continents-geo.ts  build-countries-json.ts  build-world-geo.ts  download-flags.ts  generate-icons.ts
src/: App.tsx  __init__.py  main.tsx  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/: countries.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: border_run.rs  data.rs  mod.rs  quiz.rs  settings.rs  stats.rs
src-tauri/src/domain/: grading.rs  mod.rs  models.rs  question_mode.rs  queue.rs  sm2.rs
src-tauri/src/domain/border_run/: game.rs  generator.rs  graph.rs  mod.rs  pathfinding.rs
src-tauri/src/infra/: db.rs  seed.rs
src-tauri/src/infra/migrations/: 001_init.sql
src-tauri/tests/: border_run_commands_test.rs  border_run_game_test.rs  border_run_generator_test.rs  border_run_graph_test.rs  border_run_pathfinding_test.rs  commands_test.rs  db_test.rs  grading_test.rs  queue_test.rs  sm2_test.rs
src/api/: tauri-api.test.ts  tauri-api.ts
src/core/: __init__.py  (+3 more)
tests/: test_capital_question.py  test_quiz_engine.py  test_sm2.py
(+82 files in other folders)
